Revert "CH310. Configure Codecov for CodeCov.io"
This reverts commit b72f8b01

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,14 +21,7 @@ jobs:
       # Then run your tests!
       - run:
           name: Test
-          command: mvn integration-test cobertura:cobertura
-
-      - store_test_results:
-          path: target/surefire-reports
-
-      - run:
-          name: Send to CodeCov
-          command: bash <(curl -s https://codecov.io/bash)
+          command: mvn test
 
 workflows:
   # Below is the definition of your workflow.
