--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,8 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine. 
 # See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
+orbs:
+  browser-tools: circleci/browser-tools@1.2.3
 
 jobs:
   # Below is the definition of your job to build and test your app, you can rename and customize it as you want.
@@ -22,8 +24,11 @@ jobs:
       - run:
           name: Test
           command: mvn test
+      - run:
+          name: "Run Jest and Collect Coverage Reports"
+          command: jest --collectCoverage=true
       - store_artifacts:
-          path: target
+          path: coverage
 
 workflows:
   # Below is the definition of your workflow.
