--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
     # Be sure to update the Docker image tag below to openjdk version of your application.
     # A list of available CircleCI Docker Convenience Images are available here: https://circleci.com/developer/images/image/cimg/openjdk
     docker:
-      - image: cimg/openjdk:11.0
+      - image: circleci/openjdk:8-jdk
     steps:
       # Checkout the code as the first step.
       - checkout
@@ -24,7 +24,12 @@ jobs:
       # Then run your tests!
       - run:
           name: Test
-          command: mvn test
+          command: mvn test integration-test cobertura:cobertura
+      - store_test_results:
+          path: target/surefire-reports
+      - run:
+          name: Send to CodeCov
+          command: bash <(curl -s https://codecov.io/bash)
       - store_artifacts:
           path: target
 
