--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,6 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine. 
 # See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-orbs:
-  browser-tools: circleci/browser-tools@1.2.3
 
 jobs:
   # Below is the definition of your job to build and test your app, you can rename and customize it as you want.
@@ -16,22 +14,19 @@ jobs:
     steps:
       # Checkout the code as the first step.
       - checkout
-      - browser-tools/install-browser-tools
       # Use mvn clean and package as the standard maven build phase
       - run:
           name: Build
           command: mvn -B -DskipTests clean package
       # Then run your tests!
       - run:
-          name: Test
-          command: mvn test integration-test cobertura:cobertura
+          command: mvn integration-test cobertura:cobertura
       - store_test_results:
           path: target/surefire-reports
+          
       - run:
           name: Send to CodeCov
           command: bash <(curl -s https://codecov.io/bash)
-      - store_artifacts:
-          path: target
 
 workflows:
   # Below is the definition of your workflow.
