--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,13 +14,27 @@ jobs:
     steps:
       # Checkout the code as the first step.
       - checkout
+
+      # Download and cache dependencies
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "pom.xml" }}
+            # fallback to using the latest chache if no exact match is found
+            - v1-dependencies-
+            -
       # Use mvn clean and package as the standard maven build phase
-      - run:
-          name: Build
-          command: mvn -B -DskipTests clean package
+#      - run:
+#          name: Build
+#          command: mvn -B -DskipTests clean package
+      - run: mvn dependency:go-offline
+
+      - save_cache:
+          paths:
+            - ~/.m2
+          key: v1-dependencies-{{ checksum "pom.xml" }}
+
       # Then run your tests!
-      - run:
-          command: mvn integration-test cobertura:cobertura
+      - run: mvn integration-test cobertura:cobertura
       - store_test_results:
           path: target/surefire-reports
 
